--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,3 +32,12 @@ services:
     command: 'npm start'
     ports:
       - 127.0.0.1:3000:3000
+
+  client:
+    build: './client'
+    volumes:
+      - './client:/home/node/app:rw,consistent'
+    working_dir: '/home/node/app'
+    command: 'yarn start'
+    ports:
+      - 127.0.0.1:3001:3000
